--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sharp": "^2.6.11",
     "gatsby-plugin-styled-components": "^3.3.9",
+    "gatsby-source-contentful": "^2.3.22",
     "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-transformer-remark": "^2.8.23",
     "gatsby-transformer-sharp": "^2.5.5",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
